refactor : fix filter